--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AffixActivity"/>
+        <activity android:name=".AffixActivity"
+            android:theme="@style/FullScreen"/>
     </application>
 
 </manifest>
