--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,8 @@ buildscript {
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        //greenDao
+        classpath 'org.greenrobot:greendao-gradle-plugin:3.2.2'
     }
 }
 
