武器数据人库

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,8 @@
         </activity>
         <activity android:name=".ui.AffixActivity"
             android:theme="@style/FullScreen"/>
+        <activity android:name=".ui.ListActivity"
+            android:theme="@style/FullScreen"/>
     </application>
 
 </manifest>
