--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,8 @@
             android:theme="@style/FullScreen"/>
         <activity android:name=".ui.ListActivity"
             android:theme="@style/FullScreen"/>
+        <activity android:name=".ui.ProActivity"
+            android:theme="@style/FullScreen"/>
     </application>
 
 </manifest>
