--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:name=".AnaLogApplication"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".ui.MainActivity"
+        <activity android:name=".login.WelcomActivity"
             android:theme="@style/FullScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,11 +20,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.MainActivity"
+            android:theme="@style/FullScreen"/>
         <activity android:name=".ui.AffixActivity"
             android:theme="@style/FullScreen"/>
         <activity android:name=".ui.ListActivity"
             android:theme="@style/FullScreen"/>
         <activity android:name=".ui.ProActivity"
+            android:theme="@style/FullScreen"/>
+        <activity android:name=".login.LoginActivity"
             android:theme="@style/FullScreen"/>
     </application>
 
