--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,16 +3,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.born.analog">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
     <application
+        android:name=".AnaLogApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name=".AnaLogApplication"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".login.WelcomActivity"
+        <activity
+            android:name=".login.WelcomActivity"
             android:theme="@style/FullScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,16 +25,21 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.MainActivity"
-            android:theme="@style/FullScreen"/>
-        <activity android:name=".ui.AffixActivity"
-            android:theme="@style/FullScreen"/>
-        <activity android:name=".ui.ListActivity"
-            android:theme="@style/FullScreen"/>
-        <activity android:name=".ui.ProActivity"
-            android:theme="@style/FullScreen"/>
-        <activity android:name=".login.LoginActivity"
-            android:theme="@style/FullScreen"/>
+        <activity
+            android:name=".ui.MainActivity"
+            android:theme="@style/FullScreen" />
+        <activity
+            android:name=".ui.AffixActivity"
+            android:theme="@style/FullScreen" />
+        <activity
+            android:name=".ui.ListActivity"
+            android:theme="@style/FullScreen" />
+        <activity
+            android:name=".ui.ProActivity"
+            android:theme="@style/FullScreen" />
+        <activity
+            android:name=".login.LoginActivity"
+            android:theme="@style/FullScreen" />
     </application>
 
 </manifest>
