--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
         <activity
+            android:screenOrientation="landscape"
             android:name=".login.WelcomActivity"
             android:theme="@style/FullScreen">
             <intent-filter>
@@ -26,18 +27,23 @@
             </intent-filter>
         </activity>
         <activity
+            android:screenOrientation="landscape"
             android:name=".ui.MainActivity"
             android:theme="@style/FullScreen" />
         <activity
+            android:screenOrientation="landscape"
             android:name=".ui.AffixActivity"
             android:theme="@style/FullScreen" />
         <activity
+            android:screenOrientation="landscape"
             android:name=".ui.ListActivity"
             android:theme="@style/FullScreen" />
         <activity
+            android:screenOrientation="landscape"
             android:name=".ui.ProActivity"
             android:theme="@style/FullScreen" />
         <activity
+            android:screenOrientation="landscape"
             android:name=".login.LoginActivity"
             android:theme="@style/FullScreen" />
     </application>
